8/11/10 replace A- molecule image with one that has no "bite" out of it
8/10/10 separate tools controls into Tools and View panels
8/10/10 tweak locations of pH paper and conductivity tester
8/10/10 make pH meter, pH paper, conductivity tester all mutually exclusive
# 0.00.19 (42894) Aug 10, 2010
8/10/10 use black line for titled borders
8/10/10 collaboration with Sam on conductivity tester: battery, bulb, cubic wires
8/10/10 make the dipped color on the pH paper bleed up above the surface of the solution
8/10/10 add "conductivity tester" feature to Custom Solution tab
8/9/10 display brightness value on conductivity tester (strong=bright, weak=dim)
8/9/10 add simple wires connecting probes to connectivity tester
8/9/10 add dummy nodes for conductivity tester probes, implement dragging
8/9/10 make all view elements get molecule properties (symbol, icon, color) from the model
8/9/10 add marker classes for acid and base solutions
# 0.00.18 (42860) Aug 9, 2010
8/9/10 dev version to demonstrate additional changes to pH paper
8/8/10 decided on a color key (delete ContinousColorKeyNode, rename DiscreteColorKeyNode to PHColorKeyNode)
8/8/10 change pH color from strategy pattern to factory pattern
8/8/10 add pH paper to Custom Solution tab
8/8/10 remove color animation from PHPaper
8/8/10 make SolutionRepresentation handle notification of concentration and strength changes
8/9/10 use pH=7 for color of undipped pH paper
8/9/10 reduce pH paper width by half (60 to 30)
8/9/10 align baselines in reaction equations
# 0.00.17 (42853) Aug 9, 2010
8/9/10 dev version to demonstrate revised pH paper
8/6/10 generalize ChemicalSymbolNode (from advanced-acid-base-solutions) for aligning baselines of symbols in equations
8/6/10 display nothing instead of "_ _ _" when pH meter is out of solution
8/6/10 do a linear interpolation between pH colors
8/6/10 alternative color key that shows discrete color "chips" for each integer pH value