@@ -12,7 +12,7 @@ import edu.colorado.phet.acidbasesolutions.module.ABSCanvas;
  */
 public class CustomSolutionCanvas extends ABSCanvas {
 
-    public CustomSolutionCanvas( ABSModel model ) {
-        super( model );
+    public CustomSolutionCanvas( ABSModel model, boolean dev ) {
+        super( model, dev );
     }
 }
