@@ -24,6 +24,7 @@ import edu.umd.cs.piccolo.nodes.PImage;
 import edu.umd.cs.piccolo.nodes.PPath;
 import edu.umd.cs.piccolo.nodes.PText;
 import edu.umd.cs.piccolo.util.PDimension;
+import edu.umd.cs.piccolox.nodes.PComposite;
 
 /**
  * Visual representation of the conductivity tester.
@@ -52,29 +53,34 @@ public class ConductivityTesterNode extends PhetPNode {
     private static final Color NEGATIVE_PROBE_LABEL_COLOR = Color.WHITE;
     
     // general wire properties
-    private static final Stroke WIRE_STROKE = new BasicStroke( 2f );
+    private static final Stroke WIRE_STROKE = new BasicStroke( 3f );
     
     // positive wire properties
     private static final Color POSITIVE_WIRE_COLOR = Color.BLACK;
+    private static final int POSITIVE_WIRE_CONTROL_POINT_DX = 50;
+    private static final int POSITIVE_WIRE_CONTROL_POINT_DY = -50;
     
     // negative wire properties
     private static final Color NEGATIVE_WIRE_COLOR = Color.BLACK;
+    private static final int NEGATIVE_WIRE_CONTROL_POINT_DX = -POSITIVE_WIRE_CONTROL_POINT_DX;
+    private static final int NEGATIVE_WIRE_CONTROL_POINT_DY = POSITIVE_WIRE_CONTROL_POINT_DY;
     
     // connector wire, connects bulb and battery
     private static final Color CONNECTOR_WIRE_COLOR = Color.BLACK;
-    private static final double COMPONENT_WIRE_LENGTH = 50;
+    private static final double CONNECTOR_WIRE_LENGTH = 50;
     
     // light bulb
-    private static final double FRACTION_WIRE_ATTACH_ON_BULB_BASE = 0.5;
+    private static final double FRACTION_WIRE_ATTACH_ON_BULB_BASE = 0.12;
     
     private final ConductivityTester tester;
-    private final ProbeNode positiveProbeNode, negativeProbeNode;
-    private final WireNode positiveWireNode, negativeWireNode;
-    private final ValueNode valueNode;
-    private final PImage batteryNode;
-    private final PImage lightBulbBaseNode, lightBulbGlassNode;
 
-    public ConductivityTesterNode( final ConductivityTester tester ) {
+    private final LightBulbNode lightBulbNode;
+    private final BatteryNode batteryNode;
+    private final ProbeNode positiveProbeNode, negativeProbeNode;
+    private final CubicWireNode positiveWireNode, negativeWireNode;
+    private final ValueNode valueNode;
+    
+    public ConductivityTesterNode( final ConductivityTester tester, boolean dev ) {
         
         this.tester = tester;
         tester.addSolutionRepresentationChangeListener( new SolutionRepresentationChangeAdapter() {
@@ -98,6 +104,19 @@ public class ConductivityTesterNode extends PhetPNode {
             }
         });
         
+        // light bulb
+        lightBulbNode = new LightBulbNode();
+        lightBulbNode.setScale( 0.4 ); //XXX scale image files
+        
+        // battery
+        batteryNode = new BatteryNode();
+        
+        // wire that connects the light bulb to the battery
+        StraightWireNode connectorWireNode = new StraightWireNode( CONNECTOR_WIRE_COLOR );
+        Point2D lightBulbConnectionPoint = new Point2D.Double( 0, 0 );
+        Point2D batteryConnectionPoint = new Point2D.Double( 0, CONNECTOR_WIRE_LENGTH );
+        connectorWireNode.setEndPoints( lightBulbConnectionPoint, batteryConnectionPoint );
+        
         // positive probe
         positiveProbeNode = new ProbeNode( tester.getProbeSizeReference(), POSITIVE_PROBE_FILL_COLOR, POSITIVE_PROBE_LABEL, POSITIVE_PROBE_LABEL_COLOR );
         positiveProbeNode.addInputEventListener( new CursorHandler( Cursor.N_RESIZE_CURSOR ) );
@@ -115,7 +134,6 @@ public class ConductivityTesterNode extends PhetPNode {
                 super.drag( event );
                 Point2D pMouse = event.getPositionRelativeTo( getParent() );
                 double y = pMouse.getY() - clickYOffset;
-                //TODO map y from view to model coordinate frame
                 y += tester.getLocationReference().getY();
                 tester.setPositiveProbeLocation( tester.getPositiveProbeLocationReference().getX(), y );
             }
@@ -138,75 +156,64 @@ public class ConductivityTesterNode extends PhetPNode {
                 super.drag( event );
                 Point2D pMouse = event.getPositionRelativeTo( getParent() );
                 double y = pMouse.getY() + getYOffset() - clickYOffset;
-                //TODO map y from view to model coordinate frame
                 tester.setNegativeProbeLocation( tester.getNegativeProbeLocationReference().getX(), y );
             }
         } );
         
         // positive wire
-        positiveWireNode = new WireNode.Right( POSITIVE_WIRE_COLOR );
+        positiveWireNode = new CubicWireNode( POSITIVE_WIRE_COLOR, POSITIVE_WIRE_CONTROL_POINT_DX, POSITIVE_WIRE_CONTROL_POINT_DY );
 
         // negative wire
-        negativeWireNode = new WireNode.Left( NEGATIVE_WIRE_COLOR );
+        negativeWireNode = new CubicWireNode( NEGATIVE_WIRE_COLOR, NEGATIVE_WIRE_CONTROL_POINT_DX, NEGATIVE_WIRE_CONTROL_POINT_DY );
         
-        batteryNode = new PImage( ABSImages.BATTERY );
-        
-        lightBulbBaseNode = new PImage( ABSImages.LIGHT_BULB_BASE );
-        lightBulbBaseNode.setScale( 0.4 );//XXX
-        
-        lightBulbGlassNode = new PImage( ABSImages.LIGHT_BULB_GLASS );
-        lightBulbGlassNode.setScale( 0.4 );//XXX
-        
-        PNode lightBulbGlassMaskNode = new PImage( ABSImages.LIGHT_BULB_GLASS_MASK );
-        lightBulbGlassMaskNode.setScale( 0.4 );//XXX
-        
-        PPath componentWireNode = new PPath( new Line2D.Double( 0, 0, COMPONENT_WIRE_LENGTH, 0 ) );
-        componentWireNode.setStroke( WIRE_STROKE );
-        componentWireNode.setStrokePaint( CONNECTOR_WIRE_COLOR );
-              
-        //XXX value, delete eventually
+        // brightness value, for debugging
         valueNode = new ValueNode();
-        double x = batteryNode.getFullBoundsReference().getMinX();
-        double y = batteryNode.getFullBoundsReference().getMinY() - valueNode.getFullBoundsReference().getHeight() + 60;
-        valueNode.setOffset( x, y );
         
         // rendering order
         addChild( positiveWireNode );
         addChild( negativeWireNode );
         addChild( positiveProbeNode );
         addChild( negativeProbeNode );
-        addChild( componentWireNode );
-        addChild( lightBulbBaseNode );
-        addChild( lightBulbGlassMaskNode );
-        addChild( lightBulbGlassNode );
+        addChild( connectorWireNode );
+        addChild( lightBulbNode );
         addChild( batteryNode );
-//        addChild( valueNode );
+        if ( dev ) {
+            addChild( valueNode );
+        }
         
         // layout 
-        //XXX mvt needed here?
-        lightBulbBaseNode.setOffset( -lightBulbBaseNode.getFullBoundsReference().getWidth() / 2, -lightBulbBaseNode.getFullBoundsReference().getHeight() );
-        lightBulbGlassNode.setOffset( lightBulbBaseNode.getFullBoundsReference().getCenterX() -lightBulbGlassNode.getFullBoundsReference().getWidth() / 2, lightBulbBaseNode.getFullBoundsReference().getMinY() - lightBulbGlassNode.getFullBoundsReference().getHeight() );
-        lightBulbGlassMaskNode.setOffset(lightBulbGlassNode.getOffset() );
-        batteryNode.setOffset( lightBulbBaseNode.getFullBoundsReference().getCenterX() + COMPONENT_WIRE_LENGTH, lightBulbBaseNode.getFullBounds().getMaxY() - batteryNode.getFullBounds().getHeight() / 2 );
-        componentWireNode.setOffset( lightBulbBaseNode.getFullBoundsReference().getCenterX(), lightBulbBaseNode.getFullBoundsReference().getMaxY() );
-        setOffset( tester.getLocationReference() );
+        double x = 0;
+        double y = 0;
+        lightBulbNode.setOffset( x, y );
+        x = lightBulbNode.getFullBoundsReference().getCenterX() + CONNECTOR_WIRE_LENGTH;
+        y = lightBulbNode.getFullBounds().getMaxY();
+        batteryNode.setOffset( x, y );
+        connectorWireNode.setOffset( lightBulbNode.getFullBoundsReference().getCenterX(), lightBulbNode.getFullBoundsReference().getMaxY() );
+        x = lightBulbNode.getFullBoundsReference().getCenterX();
+        y = batteryNode.getFullBoundsReference().getMaxY() + 3;
+        valueNode.setOffset( x, y );
         updatePositiveProbeLocation();
         updateNegativeProbeLocation();
         
+        setOffset( tester.getLocationReference() );
         setVisible( tester.isVisible() );
     }
-    
+
     private void updatePositiveProbeLocation() {
-        
+
         // probe
         double x = tester.getPositiveProbeLocationReference().getX() - tester.getLocationReference().getX();
         double y = tester.getPositiveProbeLocationReference().getY() - tester.getLocationReference().getY();
         positiveProbeNode.setOffset( x, y );
-        
+
         // wire
-        Point2D componentConnectionPoint = new Point2D.Double( batteryNode.getFullBoundsReference().getMaxX(), batteryNode.getFullBoundsReference().getCenterY() );
-        Point2D probeConnectionPoint = new Point2D.Double( x, y - tester.getProbeSizeReference().getHeight() );
-        positiveWireNode.setEndPoints( componentConnectionPoint, probeConnectionPoint );
+        x = batteryNode.getFullBoundsReference().getMaxX();
+        y = batteryNode.getFullBoundsReference().getCenterY();
+        Point2D batteryConnectionPoint = new Point2D.Double( x, y );
+        x = positiveProbeNode.getFullBoundsReference().getCenterX();
+        y = positiveProbeNode.getFullBoundsReference().getMinY();
+        Point2D probeConnectionPoint = new Point2D.Double( x, y );
+        positiveWireNode.setEndPoints( batteryConnectionPoint, probeConnectionPoint );
     }
     
     private void updateNegativeProbeLocation() {
@@ -215,17 +222,69 @@ public class ConductivityTesterNode extends PhetPNode {
         double x = tester.getNegativeProbeLocationReference().getX() - tester.getLocationReference().getX();
         double y = tester.getNegativeProbeLocationReference().getY() - tester.getLocationReference().getY();
         negativeProbeNode.setOffset( x, y );
-        
+
         // wire
-        Point2D componentConnectionPoint = new Point2D.Double( lightBulbBaseNode.getFullBoundsReference().getCenterX(), lightBulbBaseNode.getFullBoundsReference().getMaxY()- lightBulbBaseNode.getFullBoundsReference().getHeight()*FRACTION_WIRE_ATTACH_ON_BULB_BASE);
-        Point2D probeConnectionPoint = new Point2D.Double( x, y - tester.getProbeSizeReference().getHeight() );
+        x = lightBulbNode.getFullBoundsReference().getCenterX();
+        y = lightBulbNode.getFullBoundsReference().getMaxY() - ( lightBulbNode.getFullBoundsReference().getHeight() * FRACTION_WIRE_ATTACH_ON_BULB_BASE );
+        Point2D componentConnectionPoint = new Point2D.Double( x, y );
+        x = negativeProbeNode.getFullBoundsReference().getCenterX();
+        y = negativeProbeNode.getFullBoundsReference().getMinY();
+        Point2D probeConnectionPoint = new Point2D.Double( x, y );
         negativeWireNode.setEndPoints( componentConnectionPoint, probeConnectionPoint );
     }
     
     private void updateBrightness() {
         LinearFunction f = new LinearFunction( 0, 1, 0.85, 1 );
-        valueNode.setValue( tester.getBrightness() );//XXX
-        lightBulbGlassNode.setTransparency( (float) f.evaluate(  tester.getBrightness() ) );
+        lightBulbNode.setGlassTransparency( (float) f.evaluate( tester.getBrightness() ) );
+        valueNode.setValue( tester.getBrightness() );
+    }
+    
+    /*
+     * Light bulb, origin at bottom center.
+     */
+    private static class LightBulbNode extends PComposite {
+        
+        private final PImage glassNode;
+        
+        public LightBulbNode() {
+            
+            PNode baseNode = new PImage( ABSImages.LIGHT_BULB_BASE );
+            
+            glassNode = new PImage( ABSImages.LIGHT_BULB_GLASS );
+            
+            PNode maskNode = new PImage( ABSImages.LIGHT_BULB_GLASS_MASK );
+            
+            // rendering order
+            addChild( maskNode );
+            addChild( glassNode );
+            addChild( baseNode );
+            
+            // layout
+            double x = -baseNode.getFullBoundsReference().getWidth() / 2;
+            double y = -baseNode.getFullBoundsReference().getHeight();
+            baseNode.setOffset( x, y );
+            x = baseNode.getFullBoundsReference().getCenterX() - ( glassNode.getFullBoundsReference().getWidth() / 2 );
+            y = baseNode.getFullBoundsReference().getMinY() - glassNode.getFullBoundsReference().getHeight();
+            glassNode.setOffset( x, y );
+            maskNode.setOffset( glassNode.getOffset() );
+        }
+        
+        public void setGlassTransparency( float transparency ) {
+            glassNode.setTransparency( transparency );
+        }
+    }
+    
+    /*
+     * Battery, origin at left center.
+     */
+    private static class BatteryNode extends PComposite {
+        public BatteryNode() {
+            PImage imageNode = new PImage( ABSImages.BATTERY );
+            addChild( imageNode );
+            double x = 0;
+            double y = -imageNode.getFullBoundsReference().getHeight() / 2;
+            imageNode.setOffset( x, y );
+        }
     }
     
     /*
@@ -252,52 +311,53 @@ public class ConductivityTesterNode extends PhetPNode {
         }
     }
     
-    private static abstract class WireNode extends PPath {
-        private final int CONTROL_POINT_DY = 50;
-        private static final int CONTROL_POINT_DX = 50;
+    private interface IWire {
 
-        public WireNode( Color color ) {
+        public void setEndPoints( Point2D startPoint, Point2D endPoint );
+    }
+    
+    /*
+     * Wire that is drawn as a straight line.
+     */
+    private static class StraightWireNode extends PPath implements IWire {
+        
+        public StraightWireNode( Color color ) {
+            super();
+            setStroke( WIRE_STROKE );
+            setStrokePaint( color );
+        }
+        
+        public void setEndPoints( Point2D startPoint, Point2D endPoint ) {
+            setPathTo( new Line2D.Double( 0, 0, CONNECTOR_WIRE_LENGTH, 0 ) );
+        }
+    }
+
+    /*
+     * Wire that is drawn using a cubic parametric curve.
+     */
+    private static class CubicWireNode extends PPath implements IWire {
+
+        private final double controlPointDx, controlPointDy;
+
+        public CubicWireNode( Color color, double controlPointDx, double controlPointDy ) {
+            this.controlPointDx = controlPointDx;
+            this.controlPointDy = controlPointDy;
             setStroke( WIRE_STROKE );
             setStrokePaint( color );
         }
 
-        public void setEndPoints(Point2D componentConnectionPoint, Point2D probeConnectionPoint) {
-            Point2D.Double ctrl1 = new Point2D.Double(componentConnectionPoint.getX() + getControlPointDX(), componentConnectionPoint.getY());
-            Point2D.Double ctrl2 = new Point2D.Double(probeConnectionPoint.getX(), probeConnectionPoint.getY() + getControlPointDY());
-            setPathTo(new CubicCurve2D.Double(componentConnectionPoint.getX(), componentConnectionPoint.getY(),
-                    ctrl1.getX(), ctrl1.getY(), ctrl2.getX(), ctrl2.getY(),
-                    probeConnectionPoint.getX(), probeConnectionPoint.getY()));
-        }
-
-        protected abstract double getControlPointDX();
-
-        public int getControlPointDY(){
-            return -CONTROL_POINT_DY;
-        }
-
-        private static class Right extends WireNode{
-
-            public Right(Color color) {
-                super(color);
-            }
-
-            @Override
-            protected double getControlPointDX() {
-                return CONTROL_POINT_DX;
-            }
-        }
-        private static class Left extends WireNode{
-            public Left(Color color) {
-                super(color);
-            }
-
-            @Override
-            protected double getControlPointDX() {
-                return -CONTROL_POINT_DX;
-            }
+        public void setEndPoints( Point2D startPoint, Point2D endPoint ) {
+            Point2D.Double ctrl1 = new Point2D.Double( startPoint.getX() + controlPointDx, startPoint.getY() );
+            Point2D.Double ctrl2 = new Point2D.Double( endPoint.getX(), endPoint.getY() + controlPointDy );
+            setPathTo( new CubicCurve2D.Double( startPoint.getX(), startPoint.getY(), 
+                    ctrl1.getX(), ctrl1.getY(), ctrl2.getX(), ctrl2.getY(), 
+                    endPoint.getX(), endPoint.getY() ) );
         }
     }
     
+    /*
+     * Displays the brightness value of the model, for debugging.
+     */
     private static class ValueNode extends PText {
         
         public ValueNode() {
@@ -306,7 +366,7 @@ public class ConductivityTesterNode extends PhetPNode {
         
         public ValueNode( double brightness ) {
             setTextPaint( Color.RED );
-            setFont( new PhetFont( 20 ) );
+            setFont( new PhetFont( 16 ) );
             setValue( brightness );
         }
         
